// RPCs for Chord node comminications

syntax = "proto3";

option go_package = "./chord";

message EmptyMsg {}

message NodeEntry {
    bytes identifier = 1;
    string address = 2;
}

service Chord {
    // Get the target node's current predecessor
    rpc GetPredecessor(EmptyMsg) returns (NodeEntry);

    // Get the target node's current successor
    rpc GetSuccessor(EmptyMsg) returns (NodeEntry);

    // Set the target node's predecessor (for notify() function in the paper)
    rpc SetPredecessor(NodeEntry) returns (EmptyMsg);

    // Cbeck failure (for check_predecessor() fuunction in the paper)
    rpc Check(EmptyMsg) returns (EmptyMsg);
}